temporary header spacing change to fix portfolio layout spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,8 @@ h1 {
 h2, h3 {
   font-size: 1em;
   margin-top: 1.5em;
-  margin-bottom: 1.5em;
+  /*margin-bottom: 1.5em;*/
+  margin-bottom: 0;
 }
 
 h3 {
@@ -100,12 +101,14 @@ h3 {
 }
 
 p, pre, blockquote {
-  margin-top: 1.5em;
+  /*margin-top: 1.5em;*/
+  margin-top: 0;
   margin-bottom: 1.5em;
 }
 
 ul, ol {
-  margin-top: 1.5em;
+  /*margin-top: 1.5em;*/
+  margin-top: 0;
   margin-bottom: 1.5em;
   padding: 0;
 }
